Chore: establish Git Flow and configure .gitignore for large datasets

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Data en Modellen (Grote bestanden)
+data/
+*.zip
+*.tar.gz
+*.csv
+*.npy
+*.pth
+*.h5
+*.onnx
+
+# Python omgevingen
+venv/
+.env
+__pycache__/
+*.py[cod]
+
+# Snellius/HPC specifieke bestanden
+*.out
+*.err
+slurm-*.out
+
+
 __pycache__/
 *.pyc
 experiments/logs/
